force-app/main/default/objects/nFUSE__Transaction_Doc__c/nFUSE__Transaction_Doc__c.object-meta.xml
<CustomObject>
    <label>Transaction Doc</label>
    <nameField>
        <displayFormat>A-{000000000}</displayFormat>
        <label>Transaction Doc Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Docs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>