force-app/main/default/objects/nFUSE__Transaction_Doc__c/fields/nFUSE__Attachment__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Attachment__c</fullName>
    <description>A Soft reference to the saved Attachment containing the document.
            The attachment is one of a few ways that the document may be stored in Salesforce and related to the business process and entity.</description>
    <label>Attachment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>