force-app/main/default/objects/nFUSE__Transaction_Doc__c/fields/nFUSE__Content_Document__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Content_Document__c</fullName>
    <description>A Soft reference to the saved Content Document containing the document.
            The Content Document is one of a few ways that the document may be stored in Salesforce and related to the business process and entity.</description>
    <label>Content Document</label>
    <length>50</length>
    <type>Text</type>
</CustomField>