force-app/main/default/objects/nFUSE__Transaction_Doc__c/fields/nFUSE__DocMan_Template__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__DocMan_Template__c</fullName>
    <description>The DocMan Template name for the template forming the placeholder for the document.
            The template is used by nFUSE in the creation of the data supporting the document in Salesforce.</description>
    <label>DocMan Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>