force-app/main/default/objects/nFUSE__Transaction_Doc__c/fields/nFUSE__Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Transaction_Log__c</fullName>
    <description>The Transaction Log on the nFUSE platform records the status and result of
            integration messaging and traffic between nFUSE and third party providers.
            This field refers to the Transaction Log record containing the details of the transmission
            of the document between the third party provider back and nFUSE.</description>
    <label>Transaction Log</label>
    <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
    <relationshipLabel>Transaction Docs</relationshipLabel>
    <relationshipName>Transaction_Docs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>